--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -39,6 +39,7 @@
 
     <PreferenceCategory
         android:title="@string/alarm_settings">
+
         <ListPreference
             android:key="auto_silence"
             android:title="@string/auto_silence_title"
@@ -65,5 +66,21 @@
             android:entries="@array/volume_button_setting_entries"
             android:entryValues="@array/volume_button_setting_values"
             android:defaultValue="0" />
+
+       <ListPreference
+            android:key="flip_action"
+            android:title="@string/flip_action_title"
+            android:dialogTitle="@string/flip_action_dialog_title"
+            android:entries="@array/action_summary_entries"
+            android:entryValues="@array/action_summary_values"
+            android:defaultValue="0" />
+
+        <ListPreference
+            android:key="shake_action"
+            android:title="@string/shake_action_title"
+            android:dialogTitle="@string/shake_action_dialog_title"
+            android:entries="@array/action_summary_entries"
+            android:entryValues="@array/action_summary_values"
+            android:defaultValue="0"/>
     </PreferenceCategory>
 </PreferenceScreen>
